applying spotless changes